# tasks_and_docs

./: .cspell.config.yaml  .cspell.project-words.txt  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  CONTRIBUTING.md  COPYING.md  EXPORT.yml  LICENSE.md  README.md  mkdocs.yml  package.json  pandoc.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_cross_cutting_concepts.md  09_architectural_decisions.md  10_quality_attributes.md  11_technical_risks.md  12_implementation_example.md  13_glossary.md  A_appendix.md  arc42-template-EN.md  glossary.md  index.md  notes.md
docs/advanda/: New Branching Strategy Guidelines.docx
docs/meetings/: mm251031.md  mm251112.md  mm251118.md  mm251210.md  notes.md
docs/versioning/: README.md
docs/workshop/: devops_architecture.md  github_and_gitlab.md  ws260113.md
