[tool.poetry]
name = "doc-as-code"
version = "0.0.1"
description = "MySite 360 DevOps Documentation"
authors = ["Florian Gerdes <florian.gerdes@siemens.com>"]
license = "Siemens Inner Source License 1.4"

[[tool.poetry.source]]
name = "mkdocs"
url = "https://code.siemens.com/api/v4/projects/64538/packages/pypi/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-code-siemens-code-docs-theme = {version = "^7.7.0", allow-prereleases = true, source = "mkdocs"}
mike = "^1.1.2"
plantuml-markdown = "^3.11.1"
pypandoc = "^1.14"
pandoc-kroki-filter = {path = "pandoc-kroki-filter"}
pandoc = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
